# yew-cli

./: .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md
scripts/: add.sh  build.sh  new.sh
src/: app.rs  cli.yaml  main.rs
src/subcommands/: mod.rs
src/subcommands/new/: cargo.config  e2e.config  lib.config  mod.rs  package.config
