[package]
name = "yew-cli"
version = "0.1.0"
authors = ["Josh Fourie <josh.fourie97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "fd",
    "sd"
]

[dependencies]
clap = {version = "2.33", features = ["yaml"]}
sd = { path = "./sd" }